Pulsar connector advanced features
- Depend on pulsar-client-original
- Docs
- Batch receive support
- Transaction support
- OutgoingMessage
- Otel tracing support
- Simple perf tests
- PulsarClientService bean
- Message Converters
- Health checks
- authentication test with basic auth
- Config resolver with overriding
- Pulsar ack/nack handler strategies
- LocalPropagation tests